tests/misc_tests/nlist_ui_tests/split_at_err.stderr
error[E0271]: type mismatch resolving `<PlusOne<PlusOne<PlusOne<PlusOne<Zero>>>> as PeanoInt>::IsLe<PlusOne<PlusOne<PlusOne<Zero>>>> == Bool<true>`
 --> tests/misc_tests/nlist_ui_tests/split_at_err.rs:6:14
  |
6 |     _ = list.split_at::<Peano!(4)>();
  |              ^^^^^^^^ expected `true`, found `false`
  |
  = note: expected struct `Bool<true>`
             found struct `Bool<false>`
note: required by a bound in `nlist::nlist::splitting::<impl NList<T, L>>::split_at`
 --> src/nlist/splitting.rs
  |
  |     pub const fn split_at<At>(self) -> (NList<T, At>, NList<T, peano::SubSat<L, At>>)
  |                  -------- required by a bound in this associated function
  |     where
  |         At: peano::PeanoInt<IsLe<L> = Bool<true>>,
  |                             ^^^^^^^^^^^^^^^^^^^^ required by this bound in `nlist::nlist::splitting::<impl NList<T, L>>::split_at`
